# docs/swagger.json
@@ -36,6 +36,14 @@
                 "summary": "Change password",
                 "parameters": [
                     {
+                        "type": "string",
+                        "default": "Bearer \u003cyour-login-token\u003e",
+                        "description": "string",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Change Password Request",
                         "name": "request",
                         "in": "body",
@@ -88,6 +96,16 @@
                     "Authentication"
                 ],
                 "summary": "Logout user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cyour-login-token\u003e",
+                        "description": "string",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -125,6 +143,15 @@
                     "Users"
                 ],
                 "summary": "Get current user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -177,6 +204,24 @@
                     "Authentication"
                 ],
                 "summary": "Refresh access token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "refresh token",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.RefreshTokenRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -343,6 +388,14 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "Bearer \u003cyour-login-token\u003e",
+                        "description": "string",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "User ID",
                         "name": "id",
                         "in": "path",
@@ -422,6 +475,20 @@
                 }
             }
         },
+        "dto.RefreshTokenRequest": {
+            "type": "object",
+            "required": [
+                "refresh_token"
+            ],
+            "properties": {
+                "refresh_token": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.Role": {
             "type": "string",
             "enum": [
@@ -459,8 +526,7 @@
             "required": [
                 "email",
                 "full_name",
-                "password",
-                "username"
+                "password"
             ],
             "properties": {
                 "avatar_url": {
