# internal/handlers/http/auth.go
@@ -57,7 +57,7 @@ func (h *AuthHandler) SignUp(g *gin.Context) {
 			},
 		}
 
-		h.logger.Error("Invalid request payload in Handler Layer",
+		h.logger.Error("Invalid request payload",
 			zap.Error(err))
 
 		g.JSON(errorResponse.Error.StatusCode, errorResponse)
@@ -70,7 +70,7 @@ func (h *AuthHandler) SignUp(g *gin.Context) {
 		for _, fieldErr := range err.(validator.ValidationErrors) {
 			details = append(details, response.Details{
 				Field:   fieldErr.Field(),
-				Message: fmt.Sprintf("failed on '%s' validation in Handler Layer", fieldErr.Tag()),
+				Message: fmt.Sprintf("Validation Failed on '%s'", fieldErr.Tag()),
 			})
 		}
 
@@ -84,20 +84,20 @@ func (h *AuthHandler) SignUp(g *gin.Context) {
 			},
 		}
 
-		h.logger.Error("Validation failed in Handler Layer",
+		h.logger.Error("Validation failed",
 			zap.Error(err))
 
 		g.JSON(errorResponse.Error.StatusCode, errorResponse)
 		return
 	}
 
-	if utils.ValidatedPassword(payload.Password) {
+	if utils.ValidatePassword(payload.Password) {
 		errorResponse := &response.ErrorResponse{
 			Success: false,
 			Error: response.Error{
 				Code:       response.ErrValidation,
 				StatusCode: http.StatusBadRequest,
-				Message:    "Validation failed",
+				Message:    "Validation Failure",
 				Details: []response.Details{
 					{
 						Field:   "password",
@@ -107,7 +107,7 @@ func (h *AuthHandler) SignUp(g *gin.Context) {
 			},
 		}
 
-		h.logger.Error("Validation failed for password in Handler Layer")
+		h.logger.Error("Validation failed for password")
 		g.JSON(errorResponse.Error.StatusCode, errorResponse)
 		return
 	}
@@ -164,7 +164,7 @@ func (h *AuthHandler) SignIn(g *gin.Context) {
 			},
 		}
 
-		h.logger.Error("Invalid request payload in Handler Layer",
+		h.logger.Error("Invalid request payload",
 			zap.Error(err))
 
 		g.JSON(errorResponse.Error.StatusCode, errorResponse)
@@ -177,7 +177,7 @@ func (h *AuthHandler) SignIn(g *gin.Context) {
 		for _, fieldErr := range err.(validator.ValidationErrors) {
 			details = append(details, response.Details{
 				Field:   fieldErr.Field(),
-				Message: fmt.Sprintf("failed on '%s' validation", fieldErr.Tag()),
+				Message: fmt.Sprintf("Validation Failed on '%s'", fieldErr.Tag()),
 			})
 		}
 
@@ -191,7 +191,7 @@ func (h *AuthHandler) SignIn(g *gin.Context) {
 			},
 		}
 
-		h.logger.Error("Validation failed in Handler Layer",
+		h.logger.Error("Validation failed",
 			zap.Error(err))
 
 		g.JSON(errorResponse.Error.StatusCode, errorResponse)
@@ -226,6 +226,8 @@ func (h *AuthHandler) SignIn(g *gin.Context) {
 // @Security     BearerAuth
 // @Accept       json
 // @Produce      json
+// @Param Authorization header string true "Bearer Token"
+// @Param        request body dto.RefreshTokenRequest true "refresh token"
 // @Success      200 {object} response.SuccessResponse{data=dto.AuthTokensResponse}
 // @Failure      401 {object} response.ErrorResponse
 // @Failure      500 {object} response.ErrorResponse
@@ -240,7 +242,7 @@ func (h *AuthHandler) RefreshToken(g *gin.Context) {
 			Error: response.Error{
 				Code:       response.ErrBadRequest,
 				StatusCode: http.StatusBadRequest,
-				Message:    "Invalid request payload in Handler Layer",
+				Message:    "Invalid request payload",
 				Details: []response.Details{{
 					Field:   "body",
 					Message: err.Error(),
@@ -248,7 +250,7 @@ func (h *AuthHandler) RefreshToken(g *gin.Context) {
 			},
 		}
 
-		h.logger.Error("Invalid request payload in Handler Layer",
+		h.logger.Error("Invalid request payload",
 			zap.Error(err))
 
 		g.JSON(errorResponse.Error.StatusCode, errorResponse)
@@ -261,7 +263,7 @@ func (h *AuthHandler) RefreshToken(g *gin.Context) {
 		for _, fieldErr := range err.(validator.ValidationErrors) {
 			details = append(details, response.Details{
 				Field:   fieldErr.Field(),
-				Message: fmt.Sprintf("failed on '%s' validation in Handler Layer", fieldErr.Tag()),
+				Message: fmt.Sprintf("Validation Failed on '%s'", fieldErr.Tag()),
 			})
 		}
 		errorResponse := &response.ErrorResponse{
@@ -274,7 +276,7 @@ func (h *AuthHandler) RefreshToken(g *gin.Context) {
 			},
 		}
 
-		h.logger.Error("Validation failed in Handler Layer",
+		h.logger.Error("Validation failed",
 			zap.Error(err))
 
 		g.JSON(errorResponse.Error.StatusCode, errorResponse)
@@ -288,17 +290,17 @@ func (h *AuthHandler) RefreshToken(g *gin.Context) {
 			Error: response.Error{
 				Code:       response.ErrValidation,
 				StatusCode: http.StatusBadRequest,
-				Message:    "invalid User ID",
+				Message:    "Invalid User ID",
 				Details: []response.Details{
 					{
 						Field:   "User ID",
-						Message: "User Id missing",
+						Message: "User Id Invalid/Missing",
 					},
 				},
 			},
 		}
 
-		h.logger.Error("User Id missing  in Handler Layer")
+		h.logger.Error("User Id Invalid/Missing ")
 
 		g.JSON(errorResponse.Error.StatusCode, errorResponse)
 		return
@@ -331,6 +333,7 @@ func (h *AuthHandler) RefreshToken(g *gin.Context) {
 // @Tags         Authentication
 // @Security     BearerAuth
 // @Produce      json
+// @Param Authorization header string true "string" default(Bearer <your-login-token>)
 // @Success      200 {object} response.SuccessResponse
 // @Failure      401 {object} response.ErrorResponse
 // @Failure      500 {object} response.ErrorResponse
@@ -344,17 +347,17 @@ func (h *AuthHandler) Logout(g *gin.Context) {
 			Error: response.Error{
 				Code:       response.ErrValidation,
 				StatusCode: http.StatusBadRequest,
-				Message:    "invalid User ID",
+				Message:    "Invalid User ID",
 				Details: []response.Details{
 					{
 						Field:   "User ID",
-						Message: "User Id missing",
+						Message: "User Id Invalid/Missing",
 					},
 				},
 			},
 		}
 
-		h.logger.Error("User Id missing  in Handler Layer")
+		h.logger.Error("User Id Invalid/Missing ")
 
 		g.JSON(errorResponse.Error.StatusCode, errorResponse)
 		return
@@ -387,6 +390,7 @@ func (h *AuthHandler) Logout(g *gin.Context) {
 // @Security     BearerAuth
 // @Accept       json
 // @Produce      json
+// @Param Authorization header string true "string" default(Bearer <your-login-token>)
 // @Param        request body dto.ChangePasswordRequest true "Change Password Request"
 // @Success      200 {object} response.SuccessResponse
 // @Failure      400 {object} response.ErrorResponse
@@ -403,7 +407,7 @@ func (h *AuthHandler) ChangePassword(g *gin.Context) {
 			Error: response.Error{
 				Code:       response.ErrBadRequest,
 				StatusCode: http.StatusBadRequest,
-				Message:    "Invalid request payload in Handler Layer",
+				Message:    "Invalid request payload",
 				Details: []response.Details{{
 					Field:   "body",
 					Message: err.Error(),
@@ -411,7 +415,7 @@ func (h *AuthHandler) ChangePassword(g *gin.Context) {
 			},
 		}
 
-		h.logger.Error("Invalid request payload in Handler Layer",
+		h.logger.Error("Invalid request payload",
 			zap.Error(err))
 
 		g.JSON(errorResponse.Error.StatusCode, errorResponse)
@@ -425,17 +429,17 @@ func (h *AuthHandler) ChangePassword(g *gin.Context) {
 			Error: response.Error{
 				Code:       response.ErrValidation,
 				StatusCode: http.StatusBadRequest,
-				Message:    "invalid User ID",
+				Message:    "Invalid User ID",
 				Details: []response.Details{
 					{
 						Field:   "User ID",
-						Message: "User Id missing",
+						Message: "User Id Invalid/Missing",
 					},
 				},
 			},
 		}
 
-		h.logger.Error("User Id missing  in Handler Layer")
+		h.logger.Error("User Id Invalid/Missing")
 		g.JSON(errorResponse.Error.StatusCode, errorResponse)
 		return
 	}
@@ -443,7 +447,7 @@ func (h *AuthHandler) ChangePassword(g *gin.Context) {
 
 	id, errorResponse := utils.StringToUUID(userIDStr)
 	if errorResponse != nil {
-		h.logger.Error("Failed to convert the string into UUID in Handler layer")
+		h.logger.Error("Failed to convert the string into UUID")
 		return
 	}
 	payload.UserID = id
@@ -474,6 +478,7 @@ func (h *AuthHandler) ChangePassword(g *gin.Context) {
 // @Tags         Users
 // @Accept       json
 // @Produce      json
+// @Param Authorization header string true "string" default(Bearer <your-login-token>)
 // @Param        id path string true "User ID"
 // @Param        request body dto.UpdateUserRequest true "Update User Request"
 // @Success      200 {object} response.SuccessResponse
@@ -491,7 +496,7 @@ func (h *AuthHandler) Updateuser(g *gin.Context) {
 			Error: response.Error{
 				Code:       response.ErrBadRequest,
 				StatusCode: http.StatusBadRequest,
-				Message:    "Invalid request payload in Handler Layer",
+				Message:    "Invalid request payload",
 				Details: []response.Details{{
 					Field:   "body",
 					Message: err.Error(),
@@ -499,7 +504,7 @@ func (h *AuthHandler) Updateuser(g *gin.Context) {
 			},
 		}
 
-		h.logger.Error("Invalid request payload in Handler Layer",
+		h.logger.Error("Invalid request payload",
 			zap.Error(err))
 
 		g.JSON(errorResponse.Error.StatusCode, errorResponse)
@@ -513,17 +518,17 @@ func (h *AuthHandler) Updateuser(g *gin.Context) {
 			Error: response.Error{
 				Code:       response.ErrValidation,
 				StatusCode: http.StatusBadRequest,
-				Message:    "invalid User ID",
+				Message:    "Invalid User ID",
 				Details: []response.Details{
 					{
 						Field:   "User ID",
-						Message: "User Id missing",
+						Message: "User Id Invalid/Missing",
 					},
 				},
 			},
 		}
 
-		h.logger.Error("User Id missing  in Handler Layer")
+		h.logger.Error("User Id Invalid/Missing ")
 		g.JSON(errorResponse.Error.StatusCode, errorResponse)
 		return
 	}
@@ -531,7 +536,7 @@ func (h *AuthHandler) Updateuser(g *gin.Context) {
 
 	id, errorResponse := utils.StringToUUID(userIDStr)
 	if errorResponse != nil {
-		h.logger.Error("Failed to convert the string into UUID in Handler layer")
+		h.logger.Error("Failed to convert the string into UUID")
 		return
 	}
 
@@ -561,6 +566,7 @@ func (h *AuthHandler) Updateuser(g *gin.Context) {
 // @Tags         Users
 // @Security     BearerAuth
 // @Produce      json
+// @Param  		 Authorization header string true "Bearer Token"
 // @Success      200 {object} response.SuccessResponse{data=models.User}
 // @Failure      401 {object} response.ErrorResponse
 // @Failure      500 {object} response.ErrorResponse
@@ -574,17 +580,17 @@ func (h *AuthHandler) GetUser(g *gin.Context) {
 			Error: response.Error{
 				Code:       response.ErrValidation,
 				StatusCode: http.StatusBadRequest,
-				Message:    "invalid User ID",
+				Message:    "Invalid User ID",
 				Details: []response.Details{
 					{
 						Field:   "User ID",
-						Message: "User Id missing",
+						Message: "User Id Invalid/Missing",
 					},
 				},
 			},
 		}
 
-		h.logger.Error("User Id missing  in Handler Layer")
+		h.logger.Error("User Id Invalid/Missing ")
 		g.JSON(errorResponse.Error.StatusCode, errorResponse)
 		return
 	}
@@ -592,7 +598,7 @@ func (h *AuthHandler) GetUser(g *gin.Context) {
 
 	id, errorResponse := utils.StringToUUID(userIDStr)
 	if errorResponse != nil {
-		h.logger.Error("Failed to convert the string into UUID in Handler layer")
+		h.logger.Error("Failed to convert the string into UUID")
 		return
 	}
 
